[project]
name = "piazza-mcp"
version = "0.1.0"
description = "MCP server for browsing Piazza course forums"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "piazza-api",
    "html2text",
]

[project.scripts]
piazza-mcp = "piazza_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
