[project]
name = "piazza-mcp"
version = "0.1.0"
description = "MCP server for browsing Piazza course forums"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "piazza-api",
    "html2text",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
]

[project.scripts]
piazza-mcp = "piazza_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
