[project]
name = "piazza-mcp"
version = "0.1.2"
description = "MCP server for browsing Piazza course forums"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "piazza", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastmcp",
    "piazza-api",
    "html2text",
]

[project.urls]
Repository = "https://github.com/smchase/piazza-mcp"
Issues = "https://github.com/smchase/piazza-mcp/issues"

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pre-commit",
]

[project.scripts]
piazza-mcp = "piazza_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
